Fix display of images, including mentions
Images in rendered chapters were too wide and displayed outside of
the containing box in eg. the control panel. Fix it so that images
take the full width of the containing box.

While at it, show which images have mentions by adding a border
with the same colour gradient as text mentions.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -226,8 +226,20 @@ ul.thread-list li .btn-bar {
     margin-bottom: 0;
 }
 
-.ProseMirror img {
+.ProseMirror img, .chapter img {
     width: 100%;
+}
+span.mention {
+}
+span.mention img {
+    /* This is so that the mentioned images get the color in the border */
+    box-sizing: border-box;
+    padding: 10px;
+}
+.chapter span.mention img {
+    /* This is specifically for images with a single mention: otherwise the
+       gradient will fade to the wrong colour */
+    background-color: #e5e5e5;
 }
 
 .ProseMirror .separator, .chapter .separator {
